tests/fixtures/invalid/pow_set_float_int.py
# Cannot call pow() with Set[int], Float, Int
x = pow({1, 2, 3}, 1.0, 1)
